--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-AZURE_CLIENT_ID="718e01d8-eeb0-4f21-9fac-113dca858a48"
-AZURE_TENANT_ID="98706159-5271-46a6-82eb-34e645449dea"
-AZURE_CLIENT_SECRET="9FK8Q~1551MenXEXPjzbVz64uNJtmX43Er4.Qb9_"
+AZURE_CLIENT_ID="XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX"
+AZURE_TENANT_ID="XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX"
+AZURE_CLIENT_SECRET="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
 
-AZURE_CONTAINER_NAME="containertest"
-AZURE_STORAGE_ACCOUNT="charcentricblobstoretest.blob.core.windows.net"
+AZURE_CONTAINER_NAME="container_name"
+AZURE_STORAGE_ACCOUNT="yourblobstore.blob.core.windows.net"
